# AQM_progettino

./: 11gennaio.ipynb  Main.ipynb  Mein.ipynb  main.py  pyproject.toml
